fixed scrollbar bug :zap:

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,7 +16,7 @@ body::-webkit-scrollbar {
   height: 20px;
 }
 body::-webkit-scrollbar-track {
-  background: #0a192f;
+  background: #020b1b;
 }
 body::-webkit-scrollbar-thumb {
   background-color: #0a192f;
